--- a/index.html
+++ b/index.html
@@ -68,19 +68,20 @@
                         <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
                             <div class= "description">
-                                <p><span class= "titrehébergement">Auberge la Cannebière</span></br>
-                                Nuit à partir <span>25€</span></p>
-                                <div class= "etoiles">
-                                    <div class= "etoilespleines">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
+                                <p><span class= "titrehébergement">Auberge La Cannebiere</span></br>
+                                    Nuit à partir <span>25€</span>
+                                </p>
+                                    <div class= "etoiles">
+                                        <div class= "etoilespleines">
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                        </div>
+                                        <div class= "etoilesvides">
+                                            <i class="fas fa-star"></i>
+                                        </div>
                                     </div>
-                                    <div class= "etoilesvides">
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                </div>
                             </div>
                         </a>
                         <a href= "#" class= "images">
@@ -183,7 +184,7 @@
                     <div id= "test">
                         <a href= "#" class= "imagescote">
                             <img src= images\hebergements\4_small\hotel_le_soleil_matin.jpg alt=>
-                            <div>
+                            <div class= "description">
                                 <p><span class= "titrehébergement">Hôtel Le soleil du matin</span></br>
                                     Nuit à partir de 128€</p>
                                 <div class= "etoiles">
