--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
                                 <p><span class= "titrehébergement">Auberge La Cannebiere</span></br>
                                     Nuit à partir <span>25€</span>
                                 </p>
-                                    <div class= "etoiles">
-                                        <div class= "etoilespleines">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                        </div>
-                                        <div class= "etoilesvides">
-                                            <i class="fas fa-star"></i>
-                                        </div>
+                                <div class= "etoiles">
+                                    <div class= "etoilespleines">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
                                     </div>
+                                    <div class= "etoilesvides">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <a href= "#" class= "images">
@@ -181,13 +181,13 @@
                         <h1>Les plus populaires</h1>
                         <i class="fas fa-chart-line fa-lg"></i>
                     </div>
-                    <div id= "test">
+                    <div>
                         <a href= "#" class= "imagescote">
                             <img src= images\hebergements\4_small\hotel_le_soleil_matin.jpg alt=>
-                            <div class= "description">
+                            <div class= "descriptionpop">
                                 <p><span class= "titrehébergement">Hôtel Le soleil du matin</span></br>
                                     Nuit à partir de 128€</p>
-                                <div class= "etoiles">
+                                <div class= "etoilespop">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -200,10 +200,10 @@
                         </a>
                         <a href= "#" class= "imagescote">
                             <img src= images\hebergements\4_small\au_coeur_de_leau.jpg alt=>
-                            <div>
+                            <div class= "descriptionpop">
                                 <p><span class= "titrehébergement">Au coeur de l'eau Chambres d'hôtes</span></br>
                                     Nuit à partir de 71€</p>
-                                <div class= "etoiles">
+                                <div class= "etoilespop">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -218,10 +218,10 @@
                         </a>
                         <a href= "#" class= "imagescote">
                             <img src= images\hebergements\4_small\tout_bleu_et_blanc.jpg  alt= "Hôtel Tout bleu et Blanc">
-                            <div>
+                            <div class= "descriptionpop">
                                 <p><span class= "titrehébergement">Hôtel Tout bleu et Blanc</span></br>
                                     Nuit à partir de 68€</p>
-                                <div class= "etoiles">
+                                <div class= "etoilespop">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
