--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <h1>Les plus populaires</h1>
                         <i class="fas fa-chart-line fa-lg"></i>
                     </div>
-                    <div>
+                    <div id= "popmobile">
                         <a href= "#" class= "imagescote">
                             <img src= images\hebergements\4_small\hotel_le_soleil_matin.jpg alt=>
                             <div class= "descriptionpop">
@@ -239,7 +239,7 @@
 
                 <!--Section des activités-->
 
-            <section id= "faire">
+            <section>
                 <h1 id= "activit">Activités à Marseille</h1></br>
                 <div id= "activités">
                         <a href= "#" class= "grandesimages">
