--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
         <link rel="stylesheet" href="styles.css" />
         <script src="https://kit.fontawesome.com/153d2c7264.js" crossorigin="anonymous"></script>
