--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Reservia</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">        <title>Reservia</title>
         <link rel="stylesheet" href="styles.css" />
         <script src="https://kit.fontawesome.com/153d2c7264.js" crossorigin="anonymous"></script>
     </head>
@@ -240,7 +239,7 @@
 
                 <!--Section des activités-->
 
-            <section>
+            <section id="sectionactivités">
                 <h1 id= "activit">Activités à Marseille</h1></br>
                 <div id= "activités">
                         <a href= "#" class= "grandesimages">
