--- a/index.html
+++ b/index.html
@@ -35,23 +35,25 @@
                     <input id= "bouton" type="submit" value="Rechercher"/><br/>
                 </div>
                 <div id= "filtres">
-                    <h2>Filtres</h2>
-                    <a href = "#"class= bouton2>
-                        <i class="fas fa-money-bill-wave"></i>
-                        <h2>Economique</h2>
-                    </a>
-                    <a href = "#"class= bouton2>
-                        <i class="fas fa-child"></i>
-                        <h2>Familial</h2>
-                    </a>
-                    <a href = "#"class= bouton2>
-                        <i class="fas fa-heart"></i>
-                        <h2>Romantique</h2>
-                    </a>
-                    <a href = "#"class= bouton2>
-                        <i class="fas fa-dog"></i>
-                        <h2>Animaux autorisés</h2>
-                    </a>
+                    <p>Filtres</p>
+                    <div>
+                        <a href = "#"class= bouton2>
+                            <i class="fas fa-money-bill-wave"></i>
+                            <h2>Economique</h2>
+                        </a>
+                        <a href = "#"class= bouton2>
+                            <i class="fas fa-child"></i>
+                            <h2>Familial</h2>
+                        </a>
+                        <a href = "#"class= bouton2>
+                            <i class="fas fa-heart"></i>
+                            <h2>Romantique</h2>
+                        </a>
+                        <a href = "#"class= bouton2>
+                            <i class="fas fa-dog"></i>
+                            <h2>Animaux autorisés</h2>
+                        </a>
+                    </div>
                 </div>
                 <div id= "information">
                     <i class="fas fa-info"></i>
