--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                 <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
                     <input id= "barre" type="search" />
-                    <input id= "bouton" type="submit" value="Rechercher"/><br/>
+                    <input id= "boutonrecherche" type="submit" value="Rechercher"/><br/>
+                    <button id= "boutonmobile" type=submit>
+                        <i class="fas fa-search fa-lg"></i>
+                    </button>
                 </div>
                 <div id= "filtres">
                     <p>Filtres</p>
@@ -56,7 +59,9 @@
                     </div>
                 </div>
                 <div id= "information">
-                    <i class="fas fa-info"></i>
+                    <div>
+                        <i class="fas fa-info fa-xs"></i>
+                    </div>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
