--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <body>
 
         <!--HEADER-->
-
+        
         <header>
             <nav>  
                 <img src= images/logo/reservia@3x.png alt= "logo de Reservia">
+                <a href ="#" class= "inscriremobile">S'inscrire</a>
                 <ul>
                     <li><a href= "#hébergements" class= "bouton1">Hébergements</a></li>
                     <li><a href= "#activit" class= "bouton1">Activités</a></li>
