--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">        <title>Reservia</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">        
+        <title>Reservia</title>
         <link rel="stylesheet" href="styles.css" />
         <script src="https://kit.fontawesome.com/153d2c7264.js" crossorigin="anonymous"></script>
     </head>
@@ -12,11 +13,11 @@
         
         <header>
             <nav>  
-                <img src= images/logo/reservia@3x.png alt= "logo de Reservia">
+                <img src= images/logo/reservia1.png alt= "logo de Reservia">
                 <a href ="#" class= "inscriremobile">S'inscrire</a>
                 <ul>
-                    <li><a href= "#hébergements" class= "bouton1">Hébergements</a></li>
-                    <li><a href= "#activit" class= "bouton1">Activités</a></li>
+                    <li class= "effetbouton"><a href= "#hébergements" class= "bouton1">Hébergements</a></li>
+                    <li class= "effetbouton"><a href= "#activit" class= "bouton1">Activités</a></li>
                     <li><a href ="#" class= "inscrire">S'inscrire</a></li>
                 </ul>
             </nav>
