--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <header>
             <nav>  
-                <img src= images/logo/reservia1.png alt= "logo de Reservia">
+                <img src= images/logo/Reservia1.png alt= "logo de Reservia">
                 <a href ="#" class= "inscriremobile">S'inscrire</a>
                 <ul>
                     <li class= "effetbouton"><a href= "#hébergements" class= "bouton1">Hébergements</a></li>
@@ -42,19 +42,19 @@
                 <div id= "filtres">
                     <p>Filtres</p>
                     <div>
-                        <a href = "#"class= bouton2>
+                        <a href = "#" class= bouton2>
                             <i class="fas fa-money-bill-wave"></i>
                             <h2>Economique</h2>
                         </a>
-                        <a href = "#"class= bouton2>
+                        <a href = "#" class= bouton2>
                             <i class="fas fa-child"></i>
                             <h2>Familial</h2>
                         </a>
-                        <a href = "#"class= bouton2>
+                        <a href = "#" class= bouton2>
                             <i class="fas fa-heart"></i>
                             <h2>Romantique</h2>
                         </a>
-                        <a href = "#"class= bouton2>
+                        <a href = "#" class= bouton2>
                             <i class="fas fa-dog"></i>
                             <h2>Animaux autorisés</h2>
                         </a>
@@ -75,9 +75,9 @@
                     <h1 id= "hébergements">Hébergements à Marseille</h1>
                     <div id= "vignettes">
                         <a href= "#" class= "images">
-                            <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
+                            <img src= images/hebergements/4_small/cannebiere.jpg alt= "Auberge la Cannebière">
                             <div class= "description">
-                                <p><span class= "titrehébergement">Auberge La Cannebiere</span></br>
+                                <p><span class= "titrehébergement">Auberge La Cannebiere</span><br>
                                     Nuit à partir <span>25€</span>
                                 </p>
                                 <div class= "etoiles">
@@ -94,9 +94,9 @@
                             </div>
                         </a>
                         <a href= "#" class= "images">
-                            <img src= images\hebergements\4_small\port.jpg alt= "Hôtel du port">
+                            <img src= images/hebergements/4_small/port.jpg alt= "Hôtel du port">
                             <div class= "description">
-                                <p><span class= "titrehébergement">Hôtel du port</span></br>
+                                <p><span class= "titrehébergement">Hôtel du port</span><br>
                                 Nuit à partir de 52€</p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
@@ -110,9 +110,9 @@
                             </div>
                         </a>
                         <a href= "#" class= "images">
-                            <img src= images\hebergements\4_small\les_mouettes.jpg alt= "Hôtel Les mouettes">
+                            <img src= images/hebergements/4_small/les_mouettes.jpg alt= "Hôtel Les mouettes">
                             <div class= "description">
-                                <p><span class= "titrehébergement">Hôtel Les mouettes</span></br>
+                                <p><span class= "titrehébergement">Hôtel Les mouettes</span><br>
                                     Nuit à partir de 76€</p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
@@ -128,9 +128,9 @@
                             </div>
                         </a>
                         <a href= "#" class= "images">
-                            <img src= images\hebergements\4_small\hotel_de_la_mer.jpg alt= "Hôtel de la mer">
+                            <img src= images/hebergements/4_small/hotel_de_la_mer.jpg alt= "Hôtel de la mer">
                             <div class= "description">
-                                <p><span class= "titrehébergement">Hôtel de la mer</span></br>
+                                <p><span class= "titrehébergement">Hôtel de la mer</span><br>
                                     Nuit à partir de 46€</p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
@@ -146,9 +146,9 @@
                             </div>
                         </a>
                         <a href= "#" class= "images">
-                            <img src= images\hebergements\4_small\le_panier.jpg alt= "Auberge Le Panier">
+                            <img src= images/hebergements/4_small/le_panier.jpg alt= "Auberge Le Panier">
                             <div class= "description">
-                                <p><span class= "titrehébergement">Auberge Le Panier</span></br>
+                                <p><span class= "titrehébergement">Auberge Le Panier</span><br>
                                     Nuit à partir <span>23€</span></p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
@@ -164,9 +164,9 @@
                             </div>
                         </a>
                         <a href= "#" class= "images">
-                            <img src= images\hebergements\4_small\chez_amina.jpg alt= "Hôtel chez Amina">
+                            <img src= images/hebergements/4_small/chez_amina.jpg alt= "Hôtel chez Amina">
                             <div class= "description">
-                                <p><span class= "titrehébergement">Hôtel chez Amina</span></br>
+                                <p><span class= "titrehébergement">Hôtel chez Amina</span><br>
                                     Nuit à partir de 96€</p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
@@ -192,9 +192,9 @@
                     </div>
                     <div id= "popmobile">
                         <a href= "#" class= "imagescote">
-                            <img src= images\hebergements\4_small\hotel_le_soleil_matin.jpg alt=>
+                            <img src= images/hebergements/4_small/hotel_le_soleil_matin.jpg alt= "Hôtel le soleil matin">
                             <div class= "descriptionpop">
-                                <p><span class= "titrehébergement">Hôtel Le soleil du matin</span></br>
+                                <p><span class= "titrehébergement">Hôtel Le soleil du matin</span><br>
                                     Nuit à partir de 128€</p>
                                 <div class= "etoilespop">
                                     <div class= "etoilespleines">
@@ -208,9 +208,9 @@
                             </div>
                         </a>
                         <a href= "#" class= "imagescote">
-                            <img src= images\hebergements\4_small\au_coeur_de_leau.jpg alt=>
+                            <img src= images/hebergements/4_small/au_coeur_de_leau.jpg alt= "Au coeur de l'eau Chambres d'hôtes">
                             <div class= "descriptionpop">
-                                <p><span class= "titrehébergement">Au coeur de l'eau Chambres d'hôtes</span></br>
+                                <p><span class= "titrehébergement">Au coeur de l'eau Chambres d'hôtes</span><br>
                                     Nuit à partir de 71€</p>
                                 <div class= "etoilespop">
                                     <div class= "etoilespleines">
@@ -226,9 +226,9 @@
                             </div>
                         </a>
                         <a href= "#" class= "imagescote">
-                            <img src= images\hebergements\4_small\tout_bleu_et_blanc.jpg  alt= "Hôtel Tout bleu et Blanc">
+                            <img src= images/hebergements/4_small/tout_bleu_et_blanc.jpg  alt= "Hôtel Tout bleu et Blanc">
                             <div class= "descriptionpop">
-                                <p><span class= "titrehébergement">Hôtel Tout bleu et Blanc</span></br>
+                                <p><span class= "titrehébergement">Hôtel Tout bleu et Blanc</span><br>
                                     Nuit à partir de 68€</p>
                                 <div class= "etoilespop">
                                     <div class= "etoilespleines">
@@ -244,38 +244,39 @@
                             </div>
                         </a>
                     </div>
+                </div>
             </section>
 
                 <!--Section des activités-->
 
             <section id="sectionactivités">
-                <h1 id= "activit">Activités à Marseille</h1></br>
+                <h1 id= "activit">Activités à Marseille</h1><br>
                 <div id= "activités">
                         <a href= "#" class= "grandesimages">
-                            <img src= images\activites\2_large\Vieux_Port.jpg alt= "Vieux Port">
+                            <img src= images/activites/2_large/Vieux_Port.jpg alt= "Vieux Port">
                             <h3>Vieux Port</h3>
                         </a>
                     <div class= "actimages">
                         <a href = "#"  class= "moyimages">
-                            <img src= images\activites\3_medium\fort_pomegues.jpg alt= "Fort de Pomègues">
+                            <img src= images/activites/3_medium/fort_pomegues.jpg alt= "Fort de Pomègues">
                             <h3>Fort de Pomègues</h3>
                         </a>
                         <a href = "#"  class= "moyimages">
-                            <img src= images\activites\3_medium\iles_du_frioul.jpg alt= "Îles du Frioul">
+                            <img src= images/activites/3_medium/iles_du_frioul.jpg alt= "Îles du Frioul">
                             <h3>Îles du Frioul</h3>
                         </a>
                     </div>
                         <a href= "#" class= "grandesimages">
-                            <img src= images\activites\2_large\Calanques.jpg alt= "Parc National des Calanques">
+                            <img src= images/activites/2_large/Calanques.jpg alt= "Parc National des Calanques">
                             <h3>Parc National des Calanques</h3>
                         </a>
                     <div class= "actimages">
                         <a href = "#"  class= "moyimages">
-                            <img src= images\activites\3_medium\notre_dame.jpg alt= "Notre-Dame_de_la_Garde">
+                            <img src= images/activites/3_medium/notre_dame.jpg alt= "Notre-Dame_de_la_Garde">
                             <h3>Notre-Dame-de-la-Garde</h3>
                         </a>
                         <a href = "#"  class= "moyimages">
-                            <img src= images\activites\3_medium\parc_longchamp.jpg alt= "Parc Longchamp">
+                            <img src= images/activites/3_medium/parc_longchamp.jpg alt= "Parc Longchamp">
                             <h3>Parc Longchamp</h3>
                         </a>
                     </div>
