--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <img src= images/logo/Reservia1.png alt= "logo de Reservia">
                 <a href ="#" class= "inscriremobile">S'inscrire</a>
                 <ul>
-                    <li class= "effetbouton"><a href= "#hébergements" class= "bouton1">Hébergements</a></li>
-                    <li class= "effetbouton"><a href= "#activit" class= "bouton1">Activités</a></li>
+                    <li><a href= "#hébergements" class= "bouton1">Hébergements</a></li>
+                    <li><a href= "#activit" class= "bouton1">Activités</a></li>
                     <li><a href ="#" class= "inscrire">S'inscrire</a></li>
                 </ul>
             </nav>
