--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!--HEADER-->
         
-        <header>
+        <header class="wrapper">
             <nav>  
                 <img src= images/logo/Reservia1.png alt= "logo de Reservia">
                 <a href ="#" class= "inscriremobile">S'inscrire</a>
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="wrapper">
 
             <!--Section de recherche et filtres des hébergements-->
 
@@ -33,7 +33,7 @@
                 </div>
                 <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
-                    <input id= "barre" type="search" />
+                    <input id= "barre" type="search" value="Marseille, France"/>
                     <input id= "boutonrecherche" type="submit" value="Rechercher"/><br/>
                     <button id= "boutonmobile" type=submit>
                         <i class="fas fa-search fa-lg"></i>
@@ -42,21 +42,21 @@
                 <div id= "filtres">
                     <p>Filtres</p>
                     <div>
-                        <a href = "#" class= bouton2>
+                        <a href ="#" class= bouton2>
                             <i class="fas fa-money-bill-wave"></i>
-                            <h2>Economique</h2>
+                            <p>Economique</p>
                         </a>
                         <a href = "#" class= bouton2>
                             <i class="fas fa-child"></i>
-                            <h2>Familial</h2>
+                            <p>Familial</p>
                         </a>
                         <a href = "#" class= bouton2>
                             <i class="fas fa-heart"></i>
-                            <h2>Romantique</h2>
+                            <p>Romantique</p>
                         </a>
                         <a href = "#" class= bouton2>
                             <i class="fas fa-dog"></i>
-                            <h2>Animaux autorisés</h2>
+                            <p>Animaux autorisés</p>
                         </a>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
 
             <section id= "propositions">
                 <div id="presentation">
-                    <h1 id= "hébergements">Hébergements à Marseille</h1>
+                    <h2 id= "hébergements">Hébergements à Marseille</h2>
                     <div id= "vignettes">
                         <a href= "#" class= "images">
                             <img src= images/hebergements/4_small/cannebiere.jpg alt= "Auberge la Cannebière">
@@ -180,14 +180,14 @@
                             </div>
                         </a>
                     </div>
-                    <h3><a href= "#">Afficher plus</a></h3>
+                    <a href= "#" class= "plus">Afficher plus</a>
                 </div>
 
                 <!--Section populaire-->
 
                 <div id="populaires">
                     <div id= "entete">
-                        <h1>Les plus populaires</h1>
+                        <h2>Les plus populaires</h2>
                         <i class="fas fa-chart-line fa-lg"></i>
                     </div>
                     <div id= "popmobile">
@@ -250,7 +250,7 @@
                 <!--Section des activités-->
 
             <section id="sectionactivités">
-                <h1 id= "activit">Activités à Marseille</h1><br>
+                <h2 id= "activit">Activités à Marseille</h2><br>
                 <div id= "activités">
                         <a href= "#" class= "grandesimages">
                             <img src= images/activites/2_large/Vieux_Port.jpg alt= "Vieux Port">
@@ -287,21 +287,23 @@
         <!--FOOTER-->
         
         <footer>
-            <div>
-                <h3>A propos</h3>
-                <p><a href="#">Fonctionnement du site</a></p>
-                <p><a href="#">Conditions générales de vente</a></p>
-                <p><a href="#">Données et confidentialité</a></p>
-            </div>
-            <div>
-                <h3>Nos hébergements</h3>
-                <p><a href="#">Charte de qualité</a></p>
-                <p><a href="#">Soumettre votre hôtel</a></p>
-            </div>
-            <div>
-                <h3>Assistance</h3>
-                <p><a href="#">Centre d'aide</a></p>
-                <p><a href="#">Nous contacter</a></p>
+            <div class="wrapper">
+                <div>
+                    <h3>A propos</h3>
+                    <p><a href="#">Fonctionnement du site</a></p>
+                    <p><a href="#">Conditions générales de vente</a></p>
+                    <p><a href="#">Données et confidentialité</a></p>
+                </div>
+                <div>
+                    <h3>Nos hébergements</h3>
+                    <p><a href="#">Charte de qualité</a></p>
+                    <p><a href="#">Soumettre votre hôtel</a></p>
+                </div>
+                <div>
+                    <h3>Assistance</h3>
+                    <p><a href="#">Centre d'aide</a></p>
+                    <p><a href="#">Nous contacter</a></p>
+                </div>
             </div>
         </footer>
     </body>
