Suppression doublon recherche

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
                     <input id= "barre" type="search" value="Marseille, France"/>
-                    <input id= "boutonrecherche" type="submit" value="Rechercher"/><br/>
-                    <button id= "boutonmobile" type=submit>
+                    <button id= "boutonrecherche" type=submit>
+                        <p>Rechercher</p>
                         <i class="fas fa-search fa-lg"></i>
                     </button>
                 </div>
