--- a/index.html
+++ b/index.html
@@ -253,31 +253,31 @@
                 <h2 id= "activit">Activités à Marseille</h2><br>
                 <div id= "activités">
                         <a href= "#" class= "grandesimages">
-                            <img src= images/activites/2_large/Vieux_Port.jpg alt= "Vieux Port">
-                            <h3>Vieux Port</h3>
+                            <img src= images/activites/4_small/vieux_port.jpg alt= "Vieux Port">
+                            <p>Vieux Port</p>
                         </a>
                     <div class= "actimages">
                         <a href = "#"  class= "moyimages">
-                            <img src= images/activites/3_medium/fort_pomegues.jpg alt= "Fort de Pomègues">
-                            <h3>Fort de Pomègues</h3>
+                            <img src= images/activites/4_small/fort_pomègues.jpg alt= "Fort de Pomègues">
+                            <p>Fort de Pomègues</p>
                         </a>
                         <a href = "#"  class= "moyimages">
-                            <img src= images/activites/3_medium/iles_du_frioul.jpg alt= "Îles du Frioul">
-                            <h3>Îles du Frioul</h3>
+                            <img src= images/activites/4_small/îles_du_frioul.jpg alt= "Îles du Frioul">
+                            <p>Îles du Frioul</p>
                         </a>
                     </div>
                         <a href= "#" class= "grandesimages">
-                            <img src= images/activites/2_large/Calanques.jpg alt= "Parc National des Calanques">
-                            <h3>Parc National des Calanques</h3>
+                            <img src= images/activites/4_small/calanques.jpg alt= "Parc National des Calanques">
+                            <p>Parc National des Calanques</p>
                         </a>
                     <div class= "actimages">
                         <a href = "#"  class= "moyimages">
-                            <img src= images/activites/3_medium/notre_dame.jpg alt= "Notre-Dame_de_la_Garde">
-                            <h3>Notre-Dame-de-la-Garde</h3>
+                            <img src= images/activites/4_small/notre_dame_de_la_garde.jpg alt= "Notre-Dame_de_la_Garde">
+                            <p>Notre-Dame-de-la-Garde</p>
                         </a>
                         <a href = "#"  class= "moyimages">
-                            <img src= images/activites/3_medium/parc_longchamp.jpg alt= "Parc Longchamp">
-                            <h3>Parc Longchamp</h3>
+                            <img src= images/activites/4_small/parc_longchamp.jpg alt= "Parc Longchamp">
+                            <p>Parc Longchamp</p>
                         </a>
                     </div>
                 </div>
