--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <h2 id= "activit">Activités à Marseille</h2><br>
                 <div id= "activités">
                         <a href= "#" class= "grandesimages">
-                            <img src= images/activites/4_small/vieux_port.jpg alt= "Vieux Port">
+                            <img src= images/activites/3_medium/vieux_port.jpg alt= "Vieux Port">
                             <p>Vieux Port</p>
                         </a>
                     <div class= "actimages">
@@ -261,17 +261,17 @@
                             <img src= images/activites/4_small/fort_pomègues.jpg alt= "Fort de Pomègues">
                             <p>Fort de Pomègues</p>
                         </a>
-                        <a href = "#"  class= "moyimages">
+                        <a href = "#"  class= "petitesimages">
                             <img src= images/activites/4_small/îles_du_frioul.jpg alt= "Îles du Frioul">
                             <p>Îles du Frioul</p>
                         </a>
                     </div>
                         <a href= "#" class= "grandesimages">
-                            <img src= images/activites/4_small/calanques.jpg alt= "Parc National des Calanques">
+                            <img src= images/activites/3_medium/calanques.jpg alt= "Parc National des Calanques">
                             <p>Parc National des Calanques</p>
                         </a>
                     <div class= "actimages">
-                        <a href = "#"  class= "moyimages">
+                        <a href = "#"  class= "petitesimages">
                             <img src= images/activites/4_small/notre_dame_de_la_garde.jpg alt= "Notre-Dame_de_la_Garde">
                             <p>Notre-Dame-de-la-Garde</p>
                         </a>
