Correction bouton recherche

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <i class="fas fa-map-marker-alt"></i>
                     <input id= "barre" type="search" value="Marseille, France"/>
                     <button id= "boutonrecherche" type=submit>
-                        <p>Rechercher</p>
+                        <span>Rechercher</span>
                         <i class="fas fa-search fa-lg"></i>
                     </button>
                 </div>
