--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         <!--HEADER-->
         
         <header class="wrapper">
-            <nav>  
+            <nav> 
                 <img src= images/logo/Reservia1.png alt= "logo de Reservia">
-                <a href ="#" class= "inscriremobile">S'inscrire</a>
                 <ul>
                     <li><a href= "#hébergements" class= "bouton1">Hébergements</a></li>
                     <li><a href= "#activit" class= "bouton1">Activités</a></li>
-                    <li><a href ="#" class= "inscrire">S'inscrire</a></li>
                 </ul>
+                <a href ="#" class= "inscrire">S'inscrire</a>
             </nav>
         </header>
         <main class="wrapper">
